@@ -36,3 +36,28 @@ This garden still have some kindness_
 It can +15 HP**  
 
 — You can move by using the arrow keyboard —
+
+## ⚙️Installation 
+To run a JAR file in the command prompt (CMD) with Java and JavaFX, follow these steps:
+
+1. Make sure you have Java installed on your system. You can check this by typing `java -version` in the CMD. If Java is not installed, please download and install it from the official Java website.
+
+2. Ensure that you have the JavaFX library installed on your system. If you haven't installed it yet, you can download it from the OpenJFX website.
+
+3. Open the command prompt (CMD) and navigate to the root folder where the JAR file and the required dependencies are located. You can use the `cd` command to change directories. For example, if the JAR file is located in "C:\MyProject," you would type `cd C:\MyProject` in the CMD.
+
+4. Once you are in the root folder, run the following command to execute the JAR file:
+
+```
+java -jar --module-path {JavaFX library path} --add-modules javafx.controls,javafx.fxml,javafx.media GardenEscape.jar
+```
+
+Make sure to replace `{JavaFX library path}` with the actual path to the JavaFX library on your system. If you installed JavaFX in the default location, the path may be similar to `"C:\Program Files\Java\javafx-sdk-19\lib"`. Also, ensure that the JAR file is named correctly (in this example, it is named "GardenEscape.jar").
+
+Here's an example command:
+
+```
+java -jar --module-path "C:\Program Files\Java\javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml,javafx.media GardenEscape.jar
+```
+
+By following these steps, you should be able to run the JAR file with the necessary JavaFX dependencies in the command prompt.
